<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Feedback</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="submit">Submit</string>
    <string name="comments">Comments</string>
    <string name="road_directions">Road Directions to reach OYO</string>
    <string name="cleanliness_and_hygiene">Cleanliness &amp; Hygiene</string>
    <string name="room_service">In Room Service</string>
    <string name="staff_attitude">Staff Attitude</string>
    <string name="food_service">Food Served</string>
    <string name="overall_experience">OverAll Experience</string>
    <string name="error_dialog_title">Something went wrong</string>
    <string name="no_network_dialog_message">Please Check Your Network Connection.</string>

</resources>